--- a/web/src/app/home/home.page.scss
+++ b/web/src/app/home/home.page.scss
@@ -25,3 +25,9 @@
 #container a {
   text-decoration: none;
 }
+
+.header-icon {
+  width: 24px; /* Ajustez la taille de l'icône selon vos besoins */
+  height: 24px; /* Ajustez la taille de l'icône selon vos besoins */
+  margin-right: 8px; /* Ajustez l'espacement entre l'icône et le texte selon vos besoins */
+}
