--- a/web/src/app/home/home.page.scss
+++ b/web/src/app/home/home.page.scss
@@ -13,6 +13,11 @@
   line-height: 26px;
 }
 
+#content{
+  color: black;
+
+}
+
 #container p {
   font-size: 16px;
   line-height: 22px;
@@ -30,4 +35,65 @@
   width: 24px; /* Ajustez la taille de l'icône selon vos besoins */
   height: 24px; /* Ajustez la taille de l'icône selon vos besoins */
   margin-right: 8px; /* Ajustez l'espacement entre l'icône et le texte selon vos besoins */
+}
+
+.head-grid{
+  text-align: center;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 1.5rem;
+}
+
+#menu{
+  margin-top: 4px;
+  width: 28px;
+  height: 30px;
+}
+
+#person{
+  margin-top: 4px;
+  width: 26px;
+  height: 26px;
+}
+
+#title{
+  margin-top: 8px;
+}
+
+h3 {
+  font-size: 1.375rem;
+  color: black;
+}
+
+.circle-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh; /* Ajustez selon votre besoin */
+}
+
+.circle {
+  width: 200px; /* Largeur du cercle */
+  height: 200px; /* Hauteur du cercle */
+  border-radius: 50%; /* Pour créer la forme d'un cercle */
+  background-color: #ccc; /* Couleur de fond du cercle */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.content-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh; /* Ajustez selon votre besoin */
+}
+
+.inner-scroll {
+
+  color: #000000;
+
 }
