--- a/web/src/app/auth/login/login.page.html
+++ b/web/src/app/auth/login/login.page.html
@@ -1,13 +1,68 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" style="--background: url('/assets/img/log_background.jpeg') no-repeat center center fixed; background-size: cover; display: flex; justify-content: center; align-items: center;">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">Login</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-grid class="background-image-container" style="position: relative; max-width: 300px; width: 100%; border-radius: 10px; overflow: hidden;">
+    <!-- Image de fond définie via CSS -->
+  </ion-grid>
+  
+
+  <ion-grid class="login-container" style="background-color: rgb(255, 255, 255); padding: 20px; border-radius: 10px; text-align: center; max-width: 300px; border-top-right-radius: 15px;">
+    <ion-row>
+      <ion-col size="12">
+        <ion-title class="text-center" style="color: rgb(255, 127, 0); font-size: 25px;">Login</ion-title>
+      </ion-col>
+
+      <ion-col size="12">
+        <p class="text-center text-muted" style="color: rgb(212, 208, 208);">Sign in to continue.</p>
+      </ion-col>
+
+      <ion-col size="12" class="label-left">
+        <ion-label position="stacked">matricule</ion-label>
+        <ion-item style="background-color: #ccc; --background: none;">
+          <ion-input type="text" name="matricule" id="matricule" placeholder="yao225" required autofocus></ion-input>
+        </ion-item>
+      </ion-col>
+
+      <ion-col size="12" class="label-left">
+        <ion-label position="stacked">PASSWORD</ion-label>
+        <ion-item style="background-color: #ccc; --background: none;">
+          <ion-input type="password" name="password" id="password" placeholder="password" required autofocus></ion-input>
+        </ion-item>
+      </ion-col>
+
+      <ion-col size="12" class="mb-3 text-center">
+        <ion-button expand="block" color="primary" type="submit">Log in</ion-button>
+      </ion-col>
+
+      <ion-col size="12">
+        <p class="text-center"><a href="#">Forgot Password?</a></p>
+        <p class="text-center"><a href="#">Signup !</a></p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
+<style>
+.background-image-container::before {
+  content: "";
+  background-image: url('/assets/img/log_backgroung.jpg'); /* Remplacez par le chemin vers votre image */
+  background-size: cover; /* Ajuste l'image pour couvrir tout l'arrière-plan */
+  background-position: center; /* Centre l'image */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Place l'image en arrière-plan */
+  border-radius: inherit; /* Applique les mêmes bordures arrondies que le conteneur */
+}
+  
+.login-container {
+  position: relative; /* Pour positionner le formulaire par rapport à l'image de fond */
+  z-index: 1; /* Assure que le formulaire est au-dessus de l'image de fond */
+}
+</style>
