--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -48,7 +48,7 @@ ion-toolbar {
 
 /* Définir la couleur du texte en noir */
 body, ion-content, ion-header, ion-toolbar {
-  color: #000000;
+  color: #ffffff;
 }
 
 /* Assurez-vous également de spécifier les couleurs du texte pour les différents composants */
