--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -23,6 +23,9 @@
 @import "@ionic/angular/css/float-elements.css";
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
+@import "../node_modules/bootstrap/scss/bootstrap";
+
+
 @import "@ionic/angular/css/flex-utils.css";
 
 /**
