Mise à jour du code home

--- a/web/src/app/user/home/home.page.html
+++ b/web/src/app/user/home/home.page.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 
 <ion-content id="content" [fullscreen]="true">
   <div class="circle-container">
