--- a/web/src/app/auth/register/register.page.scss
+++ b/web/src/app/auth/register/register.page.scss
@@ -47,15 +47,8 @@ ion-row{
     font-size: xx-large;
 }
 
-#h2-login{
+#h2-register{
     color: #EE7D04!important;
-}
-
-
-.login-small {
-    color: black!important;
-    font-size: 15px !important;
-    margin-top: 10px;
 }
 
 .section {
@@ -101,6 +94,12 @@ ion-row{
 
 .register-button {
     position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
     top: 95px;
     margin: auto;
     width: 88%;
@@ -112,6 +111,22 @@ ion-row{
     background: #FFA500;
     background-color: #EE7D04;
     // border: 1px solid #EE7D04;
+}
+
+.register-small {
+    color: black!important;
+    font-size: 15px !important;
+    margin-top: 10px;
+}
+
+.register-small-connected {
+    text-align: center;
+    // align-items: center;
+    color: black !important;
+    font-size: 15px !important;
+    margin-top: 25px;
+    right: 15px;
+    // margin-top: -10px; /* Ajustez cette valeur selon vos besoins */
 }
 
 .signin-link {
