--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -40,6 +40,33 @@
 @import "@ionic/angular/css/palettes/dark.system.css";
 
 /* Ajout des styles pour un fond blanc global */
+// ion-content {
+//   --background: #ffffff;
+//   color: #000000;
+// }
+
+// ion-header,
+// ion-toolbar, ion-item {
+//   --background: #ffffff;
+// }
+
+// /* Définir la couleur du texte en noir */
+// body, ion-header, ion-toolbar {
+//   color: #000000;
+// }
+
+
+// /* Ajustement des couleurs des textes spécifiques si nécessaire */
+// ion-title, ion-label, ion-text, ion-item {
+//   color: #000000 !important;
+// }
+// .inner-scroll {
+
+//   color: #000000;
+
+// }
+
+/* Ajout des styles pour un fond blanc global */
 ion-content {
   --background: #ffffff;
   color: #000000;
@@ -51,13 +78,8 @@ ion-toolbar, ion-item {
 }
 
 /* Définir la couleur du texte en noir */
-<<<<<<< HEAD
-body, ion-content, ion-header, ion-toolbar {
-  color: #ffffff;
-=======
 body, ion-header, ion-toolbar {
   color: #000000;
->>>>>>> 4678af18ecfba5d22fda586e5eb8c5e4ba478377
 }
 
 
