--- a/web/src/app/user/add-property/add-property.page.html
+++ b/web/src/app/user/add-property/add-property.page.html
@@ -6,7 +6,7 @@
   </div>
   <ion-list class="forms">
 
-    <ion-item class="p-0" style="width: 80%; height: auto;">
+    <ion-item class="p-0">
       <ion-label>Select your property: </ion-label>
       <ion-select style="height: 30px;" class="custom-select">
         <ion-select-option value="option1">Home</ion-select-option>
@@ -45,10 +45,11 @@
         <ion-label>Device usage time: </ion-label>
         <ion-input type="email" ></ion-input>
       </ion-item>
+      <div class="p-5 pb-0 ">
+        <ion-button color="success" expand="block">Add</ion-button>
+      </div>
     </div>
 
   </ion-list>
-  <div class="p-5">
-    <ion-button color="success" expand="block">Add</ion-button>
-  </div>
+
 </ion-content>
