--- a/web/src/app/auth/register/register.page.scss
+++ b/web/src/app/auth/register/register.page.scss
@@ -125,7 +125,8 @@ ion-row{
     color: black !important;
     font-size: 15px !important;
     margin-top: 25px;
-    right: 15px;
+    display: inline-block;
+    // right: 15px;
     // margin-top: -10px; /* Ajustez cette valeur selon vos besoins */
 }
 
