--- a/web/src/app/auth/register/register.page.html
+++ b/web/src/app/auth/register/register.page.html
@@ -86,9 +86,14 @@
 
           <ion-button class="register-button"  expand="block">Submit</ion-button>
 
-          <ion-row class="register-small-connected">
-            <small>Already have an account!<a href="#" class="signin-link">Sign</a></small>
-          </ion-row>
+          <div class="section center-content">
+            <ion-label class="have-account">Already have an account!</ion-label>
+            <a href="#" class="signin-link">Sign</a>
+          </div>
+        
+          <!-- <ion-row class="register-small-connected">
+           
+          </ion-row> -->
 
       </form>
   </div>
