--- a/web/src/app/auth/register/register.page.html
+++ b/web/src/app/auth/register/register.page.html
@@ -88,7 +88,7 @@
 
           <div class="section center-content">
             <ion-label class="have-account">Already have an account!</ion-label>
-            <a href="#" class="signin-link">Sign</a>
+            <a href="#" class="signin-link">Sign In</a>
           </div>
         
           <!-- <ion-row class="register-small-connected">
