--- a/web/src/app/auth/login/login.page.html
+++ b/web/src/app/auth/login/login.page.html
@@ -1,9 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content class="ion-padding content">
   <div class="img-content">
     <!-- <ion-thumbnail class="cie-img">
@@ -51,20 +45,17 @@
 
       <ion-button  type="submit"  class="login-button" expand="block">Se connecter</ion-button>
 
-      <ion-row class="ion-align-items-center mt-3">
-        <ion-col>
-          <a href="#" class="forgot-link">
-            <small class="">Forgot password</small>
-          </a>
-        </ion-col>
-      </ion-row>
+      <ion-row class="center-content ion-align-items-center">
+        <a href="#" class="forgot-link">
+          <small class="">Forgot password</small>
+        </a>
 
-      <ion-row class="ion-align-items-center">
-        <ion-col>
+        <p class="Sign-up-message">
+          Dont have an account yet!
           <a href="#" class="signup-link">
             <small class="">Sign up</small>
           </a>
-        </ion-col>
+        </p>
       </ion-row>
 
     </form>
