ajout de la page invoice dans le module user

--- a/web/src/theme/variables.scss
+++ b/web/src/theme/variables.scss
@@ -78,6 +78,13 @@
 	--ion-color-dark-shade: #292929;
 	--ion-color-dark-tint: #444444;
 
+  --ion-color-btn: #EE7D04;
+	--ion-color-btn-rgb: 238,125,4;
+	--ion-color-btn-contrast: #000000;
+	--ion-color-btn-contrast-rgb: 0,0,0;
+	--ion-color-btn-shade: #d16e04;
+	--ion-color-btn-tint: #f08a1d;
+
 }
   
   @media (prefers-color-scheme: light) {
