--- a/web/src/theme/variables.scss
+++ b/web/src/theme/variables.scss
@@ -15,12 +15,19 @@
   
   /** Ionic CSS Variables **/
   :root {
-	--ion-color-primary: #0054e9;
-	--ion-color-primary-rgb: 0,84,233;
-	--ion-color-primary-contrast: #ffffff;
-	--ion-color-primary-contrast-rgb: 255,255,255;
-	--ion-color-primary-shade: #004acd;
-	--ion-color-primary-tint: #1a65eb;
+	// --ion-color-primary: #0054e9;
+	// --ion-color-primary-rgb: 0,84,233;
+	// --ion-color-primary-contrast: #ffffff;
+	// --ion-color-primary-contrast-rgb: 255,255,255;
+	// --ion-color-primary-shade: #004acd;
+	// --ion-color-primary-tint: #1a65eb;
+
+  --ion-color-primary: #EE7D04;
+  --ion-color-primary-rgb: 238,125,4;
+	--ion-color-primary-contrast: #000000;
+	--ion-color-primary-contrast-rgb: 0,0,0;
+	--ion-color-primary-shade: #d16e04;
+	--ion-color-primary-tint: #f08a1d;
 
 	--ion-color-secondary: #0163aa;
 	--ion-color-secondary-rgb: 1,99,170;
