--- a/web/src/app/user/add-property/add-property.page.scss
+++ b/web/src/app/user/add-property/add-property.page.scss
@@ -1,3 +1,6 @@
+#content{
+  padding: 20px 10px 20px 10px;
+}
 
 .forms {
   text-align: center;
@@ -8,6 +11,15 @@
   left: 0;
   right: 0;
   border: 0px;
+}
+
+.opemodal{
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  height: 40px;
+  padding: 0px;
+  margin: 20px 0px 50px 25%;
 }
 
 .header {
@@ -42,77 +54,18 @@ ion-label {
   padding-right: 0px!important;
 }
 
-// #container p {
-//   font-size: 16px;
-//   line-height: 22px;
-//   color: black;
-//   margin: 0;
-// }
+ng-template{
+  color: black;
+}
 
-// .property {
-//   border-top-left-radius: 25px;
-//   border-top-right-radius: 25px;
-//   height: auto;
-//   padding: 40px 10px 10px 10px;
-//   background-color: rgb(233, 233, 233);
-//   margin-top: 5px;
-// }
+.my-custom-class {
+  --min-width: 300px;
+  --min-height: 400px;
+}
 
-// ion-router-link {
-//   color: black;
-// }
-
-// .list-md {
-//   margin-left: 0;
-//   margin-right: 0;
-//   margin-top: 0;
-//   margin-bottom: 0;
-//   padding-left: 0;
-//   padding-right: 0;
-//   padding-top: 8px;
-//   padding-bottom: 8px;
-//   background-color:  transparent;
-// }
-
-// .custom-button {
-//   --background: rgb(212, 212, 212);
-//   --color: #000000; /* Texte noir pour contraste */
-//   border-radius: 8px; /* Bords arrondis */
-// }
-
-// .custom-select {
-//   color: #000000!important;
-//   background-color: white;
-// }
-
-// .select-wrapper {
-//   -webkit-padding-start: var(--padding-start);
-//   padding-inline-start: var(--padding-start);
-//   -webkit-padding-end: var(--padding-end);
-//   padding-inline-end: var(--padding-end);
-//   padding-top: var(--padding-top);
-//   padding-bottom: var(--padding-bottom);
-//   border-radius: var(--border-radius);
-//   display: -ms-flexbox;
-//   /* display: flex; */
-//   /* position: relative; */
-//   -ms-flex-positive: 1;
-//   flex-grow: 1;
-//   -ms-flex-align: center;
-//   align-items: center;
-//   height: inherit;
-//   min-height: inherit;
-//   -webkit-transition: background-color 15ms linear;
-//   transition: background-color 15ms linear;
-//   background: transparent;
-//   line-height: normal;
-//   cursor: inherit;
-//   -webkit-box-sizing: border-box;
-//   box-sizing: border-box;
-// }
-
-// .select-wrapper-inner {
-//   // display: -ms-flexbox;
-//   overflow: hidden;
-//   margin-top: -50px;
-// }
+ion-item {
+  --border-width: 0px;
+  --border-height: 0px;
+  --border: 0px;
+  --ion-item-border-width: 0px;
+}
