ajout de la page invoice dans le module user

--- a/web/src/app/user/invoice/invoice.page.html
+++ b/web/src/app/user/invoice/invoice.page.html
@@ -6,7 +6,7 @@
   <ion-row>
     <div class="chart-container">
       <ion-segment class="chart-segment">
-        <ion-img src="assets/img/chart-pie.png"></ion-img>
+        <ion-img src="assets/img/chart-pie1.png"></ion-img>
       </ion-segment>
       <h3 class="amount-title">Amount</h3>
       <ion-label class="amount">150000 Fcfa</ion-label>
