--- a/web/src/theme/variables.scss
+++ b/web/src/theme/variables.scss
@@ -89,7 +89,7 @@
 
 }
   
- @media (prefers-color-scheme: light) {
+ @media (prefers-color-scheme: dark) {
     /*
      * Light Colors
      * -------------------------------------------
