ajout de la page invoice dans le module user

--- a/web/src/app/auth/success/success.page.scss
+++ b/web/src/app/auth/success/success.page.scss
@@ -12,7 +12,7 @@
   .page-container {
     position: relative;
     background: #FFF;
-    height: 150%;
+    height: 90vh;
     bottom: 8%;
     border-top-right-radius: 60px;
   
