--- a/web/src/app/auth/login/login.page.html
+++ b/web/src/app/auth/login/login.page.html
@@ -43,7 +43,7 @@
         </ion-item>
       </div>
 
-      <ion-button  type="submit"  class="login-button" expand="block">Se connecter</ion-button>
+      <ion-button  type="submit"  class="login-button mb-4" expand="block">Se connecter</ion-button>
 
       <ion-row class="center-content ion-align-items-center">
         <a href="#" class="forgot-link">
