update invoice page

--- a/web/src/app/user/invoice/invoice.page.html
+++ b/web/src/app/user/invoice/invoice.page.html
@@ -16,7 +16,44 @@
   <ion-row>
     <div class="invoice-details">
       <ion-label class="label">Invoice details</ion-label>
+      <ion-list lines="none">
+        <ion-item>
+          <ion-label>Total Device:</ion-label>
+          <ion-label slot="end">5</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Television:</ion-label>
+          <ion-label slot="end">3000f</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Refrigerator:</ion-label>
+          <ion-label slot="end">5000f</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Microwave:</ion-label>
+          <ion-label slot="end">3000f</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Air Conditioner:</ion-label>
+          <ion-label slot="end">5000f</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>High Heater:</ion-label>
+          <ion-label slot="end">5000f</ion-label>
+        </ion-item>
+      </ion-list>
+      
     </div>
+  
   </ion-row>
 
+
 </ion-content>
+
+<ion-toolbar>
+  <div class="footer_btn">
+    <ion-button class="back_button" fill="outline" size="default" shape="round" >Back</ion-button>
+    <ion-button class="print_button"   fill="solid" size="default" shape="round"
+      >Print</ion-button>
+  </div>
+</ion-toolbar>
