update invoice page

--- a/web/src/app/user/invoice/invoice.page.scss
+++ b/web/src/app/user/invoice/invoice.page.scss
@@ -52,7 +52,8 @@
         font-size: 20px;
     }
     ion-list{
-        background-color: #EFF3F4;;
+        background-color: #EFF3F4;
+        margin-top: 20px;
     }
     ion-item {
         --background: #EFF3F4; /* Définir la couleur de fond pour chaque élément de la liste */
