--- a/web/src/app/auth/success/success.page.scss
+++ b/web/src/app/auth/success/success.page.scss
@@ -1,3 +1,25 @@
+body {
+    overflow: hidden;
+}
+
+ion-content {
+    --overflow: hidden;
+    height: 100vh;
+}
+
+ion-content.fullscreen {
+    height: 100vh;
+}
+
+.no-scroll .inner-scroll {
+    height: 100%;
+    overflow: hidden;
+}
+
+.scroll-y {
+    overflow-y: hidden !important;
+}
+
 .logo-img {
     position: absolute;
     display: flex;
@@ -15,6 +37,8 @@
     height: 90vh;
     bottom: 8%;
     border-top-right-radius: 60px;
+    max-height: calc(100vh - 20px); /* Limiter la hauteur de la page-container à la hauteur de l'écran moins un petit espace */
+    overflow-y: auto; /* Ajouter une barre de défilement si nécessaire */
   
     .img-succes {
         width: 50%;
