--- a/web/src/app/user/invoice/invoice.page.html
+++ b/web/src/app/user/invoice/invoice.page.html
@@ -52,7 +52,7 @@
 
 <ion-toolbar>
   <div class="footer_btn">
-    <ion-button class="back_button" fill="outline" size="default" shape="round" >Back</ion-button>
+    <ion-button class="back_button" fill="outline" size="default" shape="round" routerLink="/user/home">Back</ion-button>
     <ion-button class="print_button"   fill="solid" size="default" shape="round"
       >Print</ion-button>
   </div>
