--- a/web/src/app/auth/login/login.page.scss
+++ b/web/src/app/auth/login/login.page.scss
@@ -120,7 +120,7 @@ ion-input {
     margin-top: 27px;
     border-radius: 60px;
     color: #fff;
-    background: var(--ion-color-btn);
+    background: var(--ion-color-primary);
 }
 
 .login-button:hover {
