--- a/web/src/theme/variables.scss
+++ b/web/src/theme/variables.scss
@@ -96,12 +96,19 @@
      */
   
     body {
-        --ion-color-primary: #428cff;
-        --ion-color-primary-rgb: 66,140,255;
-        --ion-color-primary-contrast: #ffffff;
-        --ion-color-primary-contrast-rgb: 255,255,255;
-        --ion-color-primary-shade: #3a7be0;
-        --ion-color-primary-tint: #5598ff;
+        // --ion-color-primary: #428cff;
+        // --ion-color-primary-rgb: 66,140,255;
+        // --ion-color-primary-contrast: #ffffff;
+        // --ion-color-primary-contrast-rgb: 255,255,255;
+        // --ion-color-primary-shade: #3a7be0;
+        // --ion-color-primary-tint: #5598ff;
+
+        --ion-color-primary: #EE7D04;
+        --ion-color-primary-rgb: 238,125,4;
+        --ion-color-primary-contrast: #000000;
+        --ion-color-primary-contrast-rgb: 0,0,0;
+        --ion-color-primary-shade: #d16e04;
+        --ion-color-primary-tint: #f08a1d;
   
         --ion-color-secondary: #50c8ff;
         --ion-color-secondary-rgb: 80,200,255;
